# 4156-mini-project

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  bugs.md  bugs.txt  citations.txt  code_coverage.sh
include/: Course.h  Department.h  Globals.h  MyApp.h  MyFileDatabase.h  RouteController.h
src/: Course.cpp  Department.cpp  MyApp.cpp  MyFileDatabase.cpp  RouteController.cpp  main.cpp
test/: CourseUnitTests.cpp  DepartmentUnitTests.cpp  MyAppUnitTests.cpp  MyFileDatabaseUnitTests.cpp  RouteControllerIntegrationTest.cpp  RouteControllerUnitTests.cpp
